--- a/delivery-24h-guide.html
+++ b/delivery-24h-guide.html
@@ -61,14 +61,45 @@
         <p>Thank you for your purchase. Here is your Launchpad Guide.</p>
 
         <div class="download-box">
-            <h3>The 24-Hour Side Hustle Launchpad</h3>
-            <p style="color: #94a3b8; margin: 1rem 0;">PDF Version • Updated 2026</p>
+            <h3>📚 Your Complete Launchpad Package</h3>
+            <p style="color: #94a3b8; margin: 1rem 0;">Everything you need to launch in 24 hours</p>
 
-            <!-- In a real scenario, this would point to the .pdf file -->
-            <!-- For now, we link to the Web Version we generated -->
-            <a href="/guide.html" target="_blank" class="btn-download">
-                Open Guide
-            </a>
+            <div style="text-align: left; margin: 2rem 0;">
+                <h4 style="margin-bottom: 1rem;">📖 Main Guide</h4>
+                <a href="/guide.html" target="_blank" class="btn-download" style="display: block; margin-bottom: 2rem;">
+                    Open: 24-Hour Side Hustle Launchpad
+                </a>
+
+                <h4 style="margin-bottom: 1rem;">🎁 Bonus Resources</h4>
+                <ul style="list-style: none; padding: 0;">
+                    <li style="margin-bottom: 1rem;">
+                        <a href="/bonus-resources/validate_niche.py" download class="btn-download"
+                            style="display: block;">
+                            📊 Validation Script (Python)
+                        </a>
+                    </li>
+                    <li style="margin-bottom: 1rem;">
+                        <a href="/bonus-resources/TRAFFIC_CHECKLIST.md" download class="btn-download"
+                            style="display: block;">
+                            📋 Zero-Ad-Spend Traffic Checklist
+                        </a>
+                    </li>
+                </ul>
+
+                <h4 style="margin: 2rem 0 1rem 0;">🎨 Landing Page Templates</h4>
+                <ul style="list-style: none; padding: 0;">
+                    <li style="margin-bottom: 0.5rem;"><a href="/bonus-resources/template1_saas_minimal.html"
+                            target="_blank">→ Template 1: SaaS Minimal</a></li>
+                    <li style="margin-bottom: 0.5rem;"><a href="/bonus-resources/template2_product_showcase.html"
+                            target="_blank">→ Template 2: Product Showcase</a></li>
+                    <li style="margin-bottom: 0.5rem;"><a href="/bonus-resources/template3_email_capture.html"
+                            target="_blank">→ Template 3: Email Capture</a></li>
+                    <li style="margin-bottom: 0.5rem;"><a href="/bonus-resources/template4_waitlist.html"
+                            target="_blank">→ Template 4: Waitlist</a></li>
+                    <li style="margin-bottom: 0.5rem;"><a href="/bonus-resources/template5_sales_page.html"
+                            target="_blank">→ Template 5: Sales Page</a></li>
+                </ul>
+            </div>
         </div>
 
         <p style="margin-top: 2rem; font-size: 0.9rem; color: #666;">
